src/styles/global.css
@font-face {
  font-family: 'BitterVariable';
  src: url('/fonts/bitter-variable-subset.woff2') format('woff2-variations');
  font-style: normal;
  font-display: fallback;
  font-weight: 100 900;
}
@font-face {
  font-family: 'Wotfard';
  src: url('/fonts/wotfard-regular-subset.woff2') format('woff2');
  font-weight: 400;
  font-style: normal;
  font-display: fallback;
}
@font-face {
  font-family: 'Wotfard';
  src: url('/fonts/wotfard-medium-subset.woff2') format('woff2');
  font-weight: 500;
  font-style: normal;
  font-display: fallback;
}
@font-face {
  font-family: 'Wotfard';
  src: url('/fonts/wotfard-semibold-subset.woff2') format('woff2');
  font-weight: 600;
  font-style: normal;
  font-display: fallback;
}

@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  :root {
    --color-white-ice: 172deg 74% 92%;
    --color-bermuda: 164deg 61% 65%;
    --color-mint: 178deg 62% 46%;
    --color-indigo: 231deg 73% 22%;
    --color-indigo-darker: 232deg 85% 15%;
  }

  h1,
  h2,
  h3,
  h4,
  h5,
  h6 {
    @apply font-sans;
  }
}

@layer components {
  .container {
    @apply max-w-full px-4 sm:px-8 md:max-w-[1200px];
  }

  .underlined {
    @apply relative after:absolute after:bottom-0 after:left-0 after:block after:h-0.5 after:w-full after:origin-left after:scale-x-0 after:transition-transform after:duration-[0.25s] after:ease-[ease] after:content-[''];
  }
  .active.underlined:after,
  .underlined[aria-current='page']:after,
  .underlined:focus:after,
  .underlined:hover:after {
    @apply scale-x-100 bg-current;
  }
}

